WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273328
[WebGPU] Invalid command buffers need to get dealloc'ed in a timely fashion
https://bugs.webkit.org/show_bug.cgi?id=273328
Summary
[WebGPU] Invalid command buffers need to get dealloc'ed in a timely fashion
Mike Wyrzykowski
Reported
2024-04-26 10:34:47 PDT
[WebGPU] Invalid command buffers should be submitted as no-ops Currently after we reach the 64 command buffer limit, we submit the commands, even invalid ones
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-26 10:35:20 PDT
<
rdar://problem/127121787
>
Mike Wyrzykowski
Comment 2
2024-05-07 09:15:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28240
EWS
Comment 3
2024-05-07 12:33:02 PDT
Committed
278474@main
(36690be3ace7): <
https://commits.webkit.org/278474@main
> Reviewed commits have been landed. Closing PR #28240 and removing active labels.
Mike Wyrzykowski
Comment 4
2024-05-09 14:24:34 PDT
Reopened Bugzilla. This caused a regression in some CTS tests, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=273973
.
Mike Wyrzykowski
Comment 5
2024-05-10 10:05:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28395
EWS
Comment 6
2024-05-10 12:42:25 PDT
Committed
278622@main
(1399a72e4ed5): <
https://commits.webkit.org/278622@main
> Reviewed commits have been landed. Closing PR #28395 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug