[WebGPU] Invalid command buffers need to get dealloc'ed in a timely fashion https://bugs.webkit.org/show_bug.cgi?id=273328 <radar://127121787>

Reviewed by Tadeu Zagallo.

Discard invalid command buffers instead of submitting
them to the driver which results in incorrect behavior
and/or uintended side effects.

* Source/WebGPU/WebGPU/CommandBuffer.h:
(WebGPU::CommandBuffer::create):
* Source/WebGPU/WebGPU/CommandBuffer.mm:
(WebGPU::CommandBuffer::CommandBuffer):
(WebGPU::CommandBuffer::makeInvalid):
* Source/WebGPU/WebGPU/CommandEncoder.h:
(WebGPU::CommandEncoder::create):
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::Device::createCommandEncoder):
(WebGPU::CommandEncoder::CommandEncoder):
(WebGPU::CommandEncoder::makeInvalid):
(WebGPU::CommandEncoder::finish):
* Source/WebGPU/WebGPU/MetalSPI.h:
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:
* Source/WebGPU/WebGPU/Queue.h:
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::ensureBlitCommandEncoder):
(WebGPU::Queue::commandBufferWithDescriptor):

Canonical link: https://commits.webkit.org/278474@main