Source/WebGPU/WebGPU/CommandBuffer.mm
@@ -30,8 +30,9 @@
 
 namespace WebGPU {
 
-CommandBuffer::CommandBuffer(id<MTLCommandBuffer> commandBuffer, Device& device)
+CommandBuffer::CommandBuffer(id<MTLCommandBuffer> commandBuffer, id<MTLSharedEvent> event, Device& device)
     : m_commandBuffer(commandBuffer)
+    , m_abortEvent(event)
     , m_device(device)
 {
 }
@@ -50,6 +51,10 @@ void CommandBuffer::setLabel(String&& label)
 
 void CommandBuffer::makeInvalid(NSString* lastError)
 {
+    if (!m_commandBuffer || m_commandBuffer.status >= MTLCommandBufferStatusCommitted)
+        return;
+
+    [m_abortEvent setSignaledValue:1];
     m_lastErrorString = lastError;
     m_device->getQueue().commitMTLCommandBuffer(m_commandBuffer);
     m_commandBuffer = nil;
