Source/WebGPU/WebGPU/MetalSPI.h
@@ -24,10 +24,14 @@
  */
 
 #if USE(INTERNAL_APPLE_SDK)
+#import <Metal/MTLCommandBuffer_Private.h>
 #import <Metal/MTLResource_Private.h>
 #else
 @protocol MTLResourceSPI <MTLResource>
 @optional
 - (kern_return_t)setOwnerWithIdentity:(mach_port_t)task_id_token;
+@end
+@protocol MTLCommandBufferSPI <MTLCommandBuffer>
+- (void)encodeConditionalAbortEvent:(id <MTLSharedEvent>)event;
 @end
 #endif
