Source/WebGPU/WebGPU/Queue.mm
@@ -32,6 +32,7 @@
 #import "CommandEncoder.h"
 #import "Device.h"
 #import "IsValidToUseWith.h"
+#import "MetalSPI.h"
 #import "Texture.h"
 #import "TextureView.h"
 #import <wtf/CheckedArithmetic.h>
@@ -70,7 +71,9 @@ void Queue::ensureBlitCommandEncoder()
 
     auto *commandBufferDescriptor = [MTLCommandBufferDescriptor new];
     commandBufferDescriptor.errorOptions = MTLCommandBufferErrorOptionEncoderExecutionStatus;
-    m_commandBuffer = commandBufferWithDescriptor(commandBufferDescriptor);
+    auto blitCommandBufferWithSharedEvent = commandBufferWithDescriptor(commandBufferDescriptor);
+    m_commandBuffer = blitCommandBufferWithSharedEvent.first;
+    m_commandBufferEvent = blitCommandBufferWithSharedEvent.second;
     m_blitCommandEncoder = [m_commandBuffer blitCommandEncoder];
 }
 
@@ -103,7 +106,7 @@ void Queue::setEncoderForBuffer(id<MTLCommandBuffer> commandBuffer, id<MTLComman
         [m_openCommandEncoders setObject:commandEncoder forKey:commandBuffer];
 }
 
-id<MTLCommandBuffer> Queue::commandBufferWithDescriptor(MTLCommandBufferDescriptor* descriptor)
+std::pair<id<MTLCommandBuffer>, id<MTLSharedEvent>> Queue::commandBufferWithDescriptor(MTLCommandBufferDescriptor* descriptor)
 {
     constexpr auto maxCommandBufferCount = 64;
     if (m_createdNotCommittedBuffers.count >= maxCommandBufferCount) {
@@ -118,8 +121,14 @@ id<MTLCommandBuffer> Queue::commandBufferWithDescriptor(MTLCommandBufferDescript
     id<MTLCommandBuffer> buffer = [m_commandQueue commandBufferWithDescriptor:descriptor];
     if (buffer)
         [m_createdNotCommittedBuffers addObject:buffer];
+    auto devicePtr = m_device.get();
+    id<MTLSharedEvent> sharedEvent = nil;
+    if (devicePtr && [buffer respondsToSelector:@selector(encodeConditionalAbortEvent:)]) {
+        sharedEvent = [devicePtr->device() newSharedEvent];
+        [(id<MTLCommandBufferSPI>)buffer encodeConditionalAbortEvent:sharedEvent];
+    }
 
-    return buffer;
+    return std::make_pair(buffer, sharedEvent);
 }
 
 void Queue::makeInvalid()
